syntax = "proto3";
package customer;

service CustomerService {
    rpc CreateCustomer(CreateCustomerRequest) returns (CreateCustomerResponse) {}
}

message CreateCustomerRequest {
    string name = 1;
    string address1 = 2;
    string address2 = 3;
    string address3 = 4;
}

message CreateCustomerResponse {
    string customerID = 1;
}
